--- a/PRO_S1_15 - GUI 1/bin/.gitignore
+++ b/PRO_S1_15 - GUI 1/bin/.gitignore
@@ -1,7 +1,3 @@
-/Demo1/
-/Demo2/
-/Demo_CheckBox/
-/Demo_TextArea/
 /guifx/
 /model/
 /opg1/
@@ -9,3 +5,4 @@
 /opg3/
 /personDatabaseGUI/
 /student/
+/studentBackup/
